2003-01-21  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03660] Re: fputs -> Strfputs
	* Str.h (Strncmp_charp): paren
		(Strncasecmp_charp): ditto
		(Strinsert): ditto
		(Strshrinkfirst): ditto
	* display.c (disp_err_message): added
	* file.c (loadGeneralFile): don't put function in macro arg
		(saveBuffer): ditto
	* frame.c (createFrameFile): ditto
	* proto.h (disp_err_message): macro->function
	* table.c (pushdata): if data is NULL, use ""
		(suspend_or_pushdata): if line is NULL, use ""
	* textlist.h (pushText): don't use (s) twice in a macro

2003-01-21  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03659] Can't download from SSL.
	* istream.c (ISfileno): case IST_SSL

2003-01-21  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03658] Re: Other user can see local cookie.
	* fm.h (rc_dir): init(NULL)
	* rc.c (config_file): deleted
		(init_rc): use rc_dir

2003-01-21  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03657] fputs -> Strfputs
	* form.c (form_fputs_decode): use Strfputs()

2003-01-19  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03655] Re: file.c:image_source when undef USE_IMAGE
	* map.c (follow_map_menu): fix warnings

2003-01-19  WATANABE Katsuyuki <knabe@sannet.ne.jp>

	* [w3m-dev 03654] file.c:image_source when undef USE_IMAGE
	* file.c (readHeader): image_source ifdef USE_IMAGE
		(loadGeneralFile): ditto
		(uncompress_stream): ditto

2003-01-19  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03653] SourceForge.net: 576032 w3m https crashes with OpenSSL-0.9.7
	* istream.c (ssl_check_cert_ident): use sk_GENERAL_NAME_free()

2003-01-18  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03652] Re: Debian bug #176981
	* file.c (checkHeader): always remove_space
		(loadGeneralFile): no need remove_space

2003-01-18  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03651] Debian bug #176981
	* file.c (checkRedirection): added
		(loadGeneralFile): check redirection