@@ -1,3 +1,8 @@
+2003-01-21  Fumitoshi UKAI  <ukai@debian.or.jp>
+
+	* map.c (follow_map_menu): if USE_IMAGE or MENU_MAP
+	* proto.h (follow_map_menu): ditto
+
 2003-01-21  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
 
 	* [w3m-dev 03660] Re: fputs -> Strfputs
